fixed text overflow

--- a/frontend/src/components/ReviewFormPage/ReviewBlock.css
+++ b/frontend/src/components/ReviewFormPage/ReviewBlock.css
@@ -1,3 +1,5 @@
 .comment-content{
     transform: translateX(8%);
+    overflow-wrap: anywhere;
+    margin-right: 25px;
 }
